<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:stretchColumns="1,2,3"
    android:background="@drawable/round_table_shape"
    android:padding="@dimen/dimen_16">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:tint="@color/colorPrimary"
            android:layout_gravity="center"
            android:src="@drawable/ic_fitness_center"
            android:contentDescription="@string/energy_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:tint="@color/colorPrimary"
            android:layout_gravity="center"
            android:src="@drawable/ic_alarm"
            android:contentDescription="@string/time_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorPrimary"
            android:layout_column="3"
            android:layout_gravity="center"
            android:src="@drawable/ic_restaurant_menu"
            android:contentDescription="@string/calories_icon" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/energy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/calories" />

    </TableRow>


</TableLayout>